#3669 closed defect (fixed)
crashing vobsubs
| Reported by: | gjdfgh | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | vobsub crash SIGSEGV |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
% ffprobe Tai.Chi.Master.2.1996.HK.DVDRip.x264.4Audio.AC3.iNT-NowYS.idx -show_packets ... (output) ... Segmentation fault
Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.
Attachments (2)
Change History (4)
by , 12 years ago
| Attachment: | Tai.Chi.Master.2.1996.HK.DVDRip.x264.4Audio.AC3.iNT-NowYS.idx added |
|---|
by , 12 years ago
| Attachment: | Tai.Chi.Master.2.1996.HK.DVDRip.x264.4Audio.AC3.iNT-NowYS.sub added |
|---|
comment:1 by , 12 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | vobsub added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
| Version: | unspecified → git-master |
comment:2 by , 12 years ago
| Keywords: | crash SIGSEGV added |
|---|
Note:
See TracTickets
for help on using tickets.



Crash should be fixed in cba92a2226151abf0e3c24ed594e127203d485b8 by dropping the empty streams.
Note that since the .sub sample provided is incomplete, the complete demuxing could not be done: first entry it tries to demux from one of the stream is after .sub EOF. Ideally it should try to demux the other streams, but that belongs to another commit which was not fixed in the above commit since it's not that trivial.
Thanks for the report